force-app/main/default/objects/Opportunity/fields/Amount_City_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_City_Tax__c</fullName>
    <label>Amount City Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>