force-app/main/default/objects/Opportunity/fields/BookerDevice__c.field-meta.xml
<CustomField>
    <fullName>BookerDevice__c</fullName>
    <label>BookerDevice</label>
    <length>40</length>
    <type>Text</type>
</CustomField>