force-app/main/default/objects/Opportunity/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <label>Booking ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>