force-app/main/default/objects/Opportunity/fields/Booking_Person_account__c.field-meta.xml
<CustomField>
    <fullName>Booking_Person_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Person account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>