force-app/main/default/objects/Opportunity/fields/BookingCancellable__c.field-meta.xml
<CustomField>
    <fullName>BookingCancellable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellable</label>
    <type>Checkbox</type>
</CustomField>