force-app/main/default/objects/Opportunity/fields/BookingComment__c.field-meta.xml
<CustomField>
    <fullName>BookingComment__c</fullName>
    <label>BookingComment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>