force-app/main/default/objects/Opportunity/fields/BookingERRORCODE__c.field-meta.xml
<CustomField>
    <fullName>BookingERRORCODE__c</fullName>
    <label>BookingERRORCODE</label>
    <type>TextArea</type>
</CustomField>