force-app/main/default/objects/Opportunity/fields/BookingERRORMESSAGE__c.field-meta.xml
<CustomField>
    <fullName>BookingERRORMESSAGE__c</fullName>
    <label>BookingERRORMESSAGE</label>
    <type>TextArea</type>
</CustomField>