force-app/main/default/objects/Opportunity/fields/Bookings_Cancelled_Count__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Cancelled_Count__c</fullName>
    <label># Bookings Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>