force-app/main/default/objects/Opportunity/fields/BookingSource__c.field-meta.xml
<CustomField>
    <fullName>BookingSource__c</fullName>
    <label>BookingSource</label>
    <length>40</length>
    <type>Text</type>
</CustomField>