force-app/main/default/objects/Opportunity/fields/BookingStatus__c.field-meta.xml
<CustomField>
    <fullName>BookingStatus__c</fullName>
    <label>BookingStatus</label>
    <length>40</length>
    <type>Text</type>
</CustomField>