force-app/main/default/objects/Opportunity/fields/BookingUpdatable__c.field-meta.xml
<CustomField>
    <fullName>BookingUpdatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updatable</label>
    <type>Checkbox</type>
</CustomField>