force-app/main/default/objects/Opportunity/fields/Breakfasts__c.field-meta.xml
<CustomField>
    <fullName>Breakfasts__c</fullName>
    <label>#Breakfasts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>