force-app/main/default/objects/Opportunity/fields/Business_Lead__c.field-meta.xml
<CustomField>
    <fullName>Business_Lead__c</fullName>
    <label>Business Lead</label>
    <length>40</length>
    <type>Text</type>
</CustomField>