force-app/main/default/objects/Opportunity/fields/BusinessAccountId__c.field-meta.xml
<CustomField>
    <fullName>BusinessAccountId__c</fullName>
    <formula>Person_Account__r.PersonContact.Current_Compagny__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BusinessAccountId</label>
    <type>Text</type>
</CustomField>