force-app/main/default/objects/Opportunity/fields/cad_status__c.field-meta.xml
<CustomField>
    <fullName>cad_status__c</fullName>
    <description>About_check_in_online</description>
    <label>cad status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>