force-app/main/default/objects/Opportunity/fields/Cancellation_policy_Code__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_policy_Code__c</fullName>
    <label>Cancellation policy Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>