force-app/main/default/objects/Opportunity/fields/Chambre__c.field-meta.xml
<CustomField>
    <fullName>Chambre__c</fullName>
    <label>#Chambre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>