force-app/main/default/objects/Opportunity/fields/Channel_description__c.field-meta.xml
<CustomField>
    <fullName>Channel_description__c</fullName>
    <label>Channel description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>