force-app/main/default/objects/Opportunity/fields/Channel_MB__c.field-meta.xml
<CustomField>
    <fullName>Channel_MB__c</fullName>
    <formula>Master_Booking_FK__r.Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>