force-app/main/default/objects/Opportunity/fields/ChannelCategory__c.field-meta.xml
<CustomField>
    <fullName>ChannelCategory__c</fullName>
    <label>ChannelCategory</label>
    <length>40</length>
    <type>Text</type>
</CustomField>