force-app/main/default/objects/Opportunity/fields/CheckinbySMS__c.field-meta.xml
<CustomField>
    <fullName>CheckinbySMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkin by SMS</label>
    <type>Checkbox</type>
</CustomField>