force-app/main/default/objects/Opportunity/fields/CheckInDate__c.field-meta.xml
<CustomField>
    <fullName>CheckInDate__c</fullName>
    <label>CheckInDate</label>
    <type>Date</type>
</CustomField>