force-app/main/default/objects/Opportunity/fields/CheckOutDate__c.field-meta.xml
<CustomField>
    <fullName>CheckOutDate__c</fullName>
    <label>CheckOutDate</label>
    <type>Date</type>
</CustomField>