force-app/main/default/objects/Opportunity/fields/Client_FK__c.field-meta.xml
<CustomField>
    <fullName>Client_FK__c</fullName>
    <label>Client FK</label>
    <type>TextArea</type>
</CustomField>