force-app/main/default/objects/Opportunity/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>