force-app/main/default/objects/Opportunity/fields/CRSBookingID__c.field-meta.xml
<CustomField>
    <fullName>CRSBookingID__c</fullName>
    <label>CRSBookingID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>