force-app/main/default/objects/Opportunity/fields/Current_Status_FK__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_FK__c</fullName>
    <description>ID Last Booking Status</description>
    <label>Current Status FK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>