force-app/main/default/objects/Opportunity/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>% Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>