force-app/main/default/objects/Opportunity/fields/Deposit_amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_amount__c</fullName>
    <formula>Deposit__c  *  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>