force-app/main/default/objects/Opportunity/fields/Earn_Point__c.field-meta.xml
<CustomField>
    <fullName>Earn_Point__c</fullName>
    <label>Earn Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>