force-app/main/default/objects/Opportunity/fields/Email_AddressBooking__c.field-meta.xml
<CustomField>
    <fullName>Email_AddressBooking__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>