force-app/main/default/objects/Opportunity/fields/First_Status_FK__c.field-meta.xml
<CustomField>
    <fullName>First_Status_FK__c</fullName>
    <label>First Status FK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>