force-app/main/default/objects/Opportunity/fields/FirstNameBooking__c.field-meta.xml
<CustomField>
    <fullName>FirstNameBooking__c</fullName>
    <label>First name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>