force-app/main/default/objects/Opportunity/fields/Guaranty_policy_code__c.field-meta.xml
<CustomField>
    <fullName>Guaranty_policy_code__c</fullName>
    <label>Guaranty policy code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>