force-app/main/default/objects/Opportunity/fields/Guarentee__c.field-meta.xml
<CustomField>
    <fullName>Guarentee__c</fullName>
    <label>Guarentee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>