force-app/main/default/objects/Opportunity/fields/Guest_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Guest_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Account 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Guest Account 1)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>