force-app/main/default/objects/Opportunity/fields/Guest_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Guest_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Guest Account 2)</relationshipLabel>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>