force-app/main/default/objects/Opportunity/fields/Guest_Account_3__c.field-meta.xml
<CustomField>
    <fullName>Guest_Account_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Account 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Guest Account 3)</relationshipLabel>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>