force-app/main/default/objects/Opportunity/fields/Hotel_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotel_ID__c</fullName>
    <formula>Hotel__r.Hotel_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel ID</label>
    <type>Text</type>
</CustomField>