force-app/main/default/objects/Opportunity/fields/Hotel_Name_lost_Against__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name_lost_Against__c</fullName>
    <label>Hotel Name (lost Against)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>