force-app/main/default/objects/Opportunity/fields/Hotel_Name_MB__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name_MB__c</fullName>
    <label>Hotel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>