force-app/main/default/objects/Opportunity/fields/HotelCountry__c.field-meta.xml
<CustomField>
    <fullName>HotelCountry__c</fullName>
    <formula>TEXT(Hotel__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HotelCountry</label>
    <type>Text</type>
</CustomField>