force-app/main/default/objects/Opportunity/fields/Include_Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Include_Breakfast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Breakfast</label>
    <type>Checkbox</type>
</CustomField>