force-app/main/default/objects/Opportunity/fields/Invoiced_amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>