force-app/main/default/objects/Opportunity/fields/Invoiced_city_tax__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_city_tax__c</fullName>
    <label>Invoiced city tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>