force-app/main/default/objects/Opportunity/fields/LastModifiedDateInBookingRoomLine__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateInBookingRoomLine__c</fullName>
    <label>LastModifiedDateInBookingRoomLine</label>
    <summarizedField>Booking_Room_Line__c.LastModifiedDate</summarizedField>
    <summaryFilterItems>
        <field>Booking_Room_Line__c.Room_code__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Room_Line__c.Booking_FK__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>