force-app/main/default/objects/Opportunity/fields/LastNameBooking__c.field-meta.xml
<CustomField>
    <fullName>LastNameBooking__c</fullName>
    <label>LastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>