force-app/main/default/objects/Opportunity/fields/Lost_against__c.field-meta.xml
<CustomField>
    <fullName>Lost_against__c</fullName>
    <label>Lost against</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independant hotel 2*</fullName>
            </value>
            <value>
                <fullName>Independant hotel 3*</fullName>
            </value>
            <value>
                <fullName>Independant hotel 4*</fullName>
            </value>
            <value>
                <fullName>Independant hotel 5*</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>Ibis (rouge)</fullName>
            </value>
            <value>
                <fullName>Ibis Style</fullName>
            </value>
            <value>
                <fullName>Ibis budget</fullName>
            </value>
            <value>
                <fullName>Première classe</fullName>
            </value>
            <value>
                <fullName>Campanile</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Kyriad</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Best Western</fullName>
            </value>
            <value>
                <fullName>Indépendant</fullName>
            </value>
            <value>
                <fullName>Fasthotel</fullName>
            </value>
            <value>
                <fullName>Britt hotel</fullName>
            </value>
            <value>
                <fullName>P’tit Dej</fullName>
            </value>
            <value>
                <fullName>Balladins</fullName>
            </value>
            <value>
                <fullName>inter hotel</fullName>
            </value>
            <value>
                <fullName>Appartcity</fullName>
            </value>
            <value>
                <fullName>Adagio</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>