force-app/main/default/objects/Opportunity/fields/Master_Booking_FK__c.field-meta.xml
<CustomField>
    <fullName>Master_Booking_FK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Booking FK</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Master Booking</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>