force-app/main/default/objects/Opportunity/fields/Master_Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Booking_ID__c</fullName>
    <externalId>true</externalId>
    <label>Master Booking ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>