force-app/main/default/objects/Opportunity/fields/Masterbooking_Person_account__c.field-meta.xml
<CustomField>
    <fullName>Masterbooking_Person_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Masterbooking Person account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Masterbookings</relationshipLabel>
    <relationshipName>Masterbookings</relationshipName>
    <type>Lookup</type>
</CustomField>