force-app/main/default/objects/Opportunity/fields/MasterBooking_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>MasterBooking_Salesforce_ID__c</fullName>
    <formula>CASESAFEID(Master_Booking_FK__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MasterBooking Salesforce ID</label>
    <type>Text</type>
</CustomField>