force-app/main/default/objects/Opportunity/fields/MasterBookingBusinessAccount__c.field-meta.xml
<CustomField>
    <fullName>MasterBookingBusinessAccount__c</fullName>
    <formula>Master_Booking_FK__r.BusinessAccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MasterBookingBusinessAccount</label>
    <type>Text</type>
</CustomField>