force-app/main/default/objects/Opportunity/fields/MasterBookingPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>MasterBookingPersonAccount__c</fullName>
    <formula>Master_Booking_FK__r.Person_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MasterBookingPersonAccount</label>
    <type>Text</type>
</CustomField>