force-app/main/default/objects/Opportunity/fields/Max_Departure__c.field-meta.xml
<CustomField>
    <fullName>Max_Departure__c</fullName>
    <label>Departure</label>
    <type>Date</type>
</CustomField>