force-app/main/default/objects/Opportunity/fields/Min_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Min_Arrival__c</fullName>
    <label>Arrival</label>
    <type>Date</type>
</CustomField>