force-app/main/default/objects/Opportunity/fields/Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number__c</fullName>
    <label>Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>