force-app/main/default/objects/Opportunity/fields/NB_Adults__c.field-meta.xml
<CustomField>
    <fullName>NB_Adults__c</fullName>
    <label>NB Adults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>