force-app/main/default/objects/Opportunity/fields/NB_Children__c.field-meta.xml
<CustomField>
    <fullName>NB_Children__c</fullName>
    <label>NB Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>