force-app/main/default/objects/Opportunity/fields/Number_of_nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_nights__c</fullName>
    <formula>Max_Departure__c -  Min_Arrival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>