force-app/main/default/objects/Opportunity/fields/Number_of_nights_master__c.field-meta.xml
<CustomField>
    <fullName>Number_of_nights_master__c</fullName>
    <label>Number of nights master</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>