force-app/main/default/objects/Opportunity/fields/NumberOfBookingRoomLine__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBookingRoomLine__c</fullName>
    <label>NumberOfBookingRoomLine</label>
    <summaryFilterItems>
        <field>Booking_Room_Line__c.Room_code__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Room_Line__c.Booking_FK__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>