force-app/main/default/objects/Opportunity/fields/OldParent__c.field-meta.xml
<CustomField>
    <fullName>OldParent__c</fullName>
    <label>OldParent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>