force-app/main/default/objects/Opportunity/fields/OldParentAccount__c.field-meta.xml
<CustomField>
    <fullName>OldParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OldParentAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings / Opportunities (OldParentAccount)</relationshipLabel>
    <relationshipName>Bookings_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>