force-app/main/default/objects/Opportunity/fields/OnTheCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>OnTheCurrentYear__c</fullName>
    <formula>if(YEAR(Min_Arrival__c)== YEAR(Today()),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OnTheCurrentYear</label>
    <type>Checkbox</type>
</CustomField>