force-app/main/default/objects/Opportunity/fields/opco__c.field-meta.xml
<CustomField>
    <fullName>opco__c</fullName>
    <label>opco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>