force-app/main/default/objects/Opportunity/fields/Opportunity_Scope__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Scope__c</fullName>
    <label>Opportunity Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>