force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>National contract</fullName>
            </value>
            <value>
                <fullName>Carte Logée</fullName>
            </value>
            <value>
                <fullName>EClub</fullName>
            </value>
            <value>
                <fullName>Local Contract</fullName>
            </value>
            <value>
                <fullName>Work Council Contract</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Inter Council Contract</fullName>
            </value>
            <value>
                <fullName>Chain Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>