force-app/main/default/objects/Opportunity/fields/Other_reason__c.field-meta.xml
<CustomField>
    <fullName>Other_reason__c</fullName>
    <label>Other reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>