force-app/main/default/objects/Opportunity/fields/PartnerCode__c.field-meta.xml
<CustomField>
    <fullName>PartnerCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (partner code)</relationshipLabel>
    <relationshipName>BookingsPartnerCode</relationshipName>
    <type>Lookup</type>
</CustomField>