force-app/main/default/objects/Opportunity/fields/Pay__c.field-meta.xml
<CustomField>
    <fullName>Pay__c</fullName>
    <label>Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After departure</fullName>
            </value>
            <value>
                <fullName>Pre payment</fullName>
            </value>
            <value>
                <fullName>VCC</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Deposit payment</fullName>
            </value>
            <value>
                <fullName>Down payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>