force-app/main/default/objects/Opportunity/fields/Payment_at_Booking__c.field-meta.xml
<CustomField>
    <fullName>Payment_at_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment at Booking</label>
    <type>Checkbox</type>
</CustomField>