force-app/main/default/objects/Opportunity/fields/PersonContactID_del__c.field-meta.xml
<CustomField>
    <fullName>PersonContactID_del__c</fullName>
    <description>Technical field for Marketing Cloud.</description>
    <formula>CASESAFEID(Person_Account__r.PersonContactId)</formula>
    <label>PersonContactID</label>
    <type>Text</type>
</CustomField>