force-app/main/default/objects/Opportunity/fields/Phone_NumberBooking__c.field-meta.xml
<CustomField>
    <fullName>Phone_NumberBooking__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>