force-app/main/default/objects/Opportunity/fields/PMSBookingId__c.field-meta.xml
<CustomField>
    <fullName>PMSBookingId__c</fullName>
    <label>PMSBookingId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>