force-app/main/default/objects/Opportunity/fields/PMSClientId__c.field-meta.xml
<CustomField>
    <fullName>PMSClientId__c</fullName>
    <label>PMSClientId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>