force-app/main/default/objects/Opportunity/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <summarizedField>Booking_Room_Line__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Booking_Room_Line__c.Booking_FK__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>