force-app/main/default/objects/Opportunity/fields/Prolongation__c.field-meta.xml
<CustomField>
    <fullName>Prolongation__c</fullName>
    <label>Prolongation</label>
    <type>Date</type>
</CustomField>